--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_subdirectory(graph)
+add_subdirectory(storage)
+add_subdirectory(virtual_memory)
 
-add_library(${PROJECT_NAME} STATIC ${ALL_OBJECT_FILES})
+add_library(${PROJECT_NAME}_lib STATIC ${ALL_OBJECT_FILES})
+target_link_libraries(${PROJECT_NAME}_lib PUBLIC fmt::fmt)
+target_include_directories(${PROJECT_NAME}_lib PUBLIC ${PROJECT_SOURCE_DIR}/include)
